change order of div and picture tags to reflect correct parent-child structure. Add display flex to image-tint clas to remove purple overlap at bottom of image

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ p {
   background: #AA5CDB;
   background: hsl(277, 64%, 61%);
   border-radius: 0.5rem 0.5rem 0 0;
+  display: flex;
 }
 img{
 
